--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- IF JS IS AVAILABLE ADD CLASS -->
-  <script>document.documentElement.classList.add('has-js');</script>
-  <!-- CSS -->
-  {%- include "css/styles.njk" -%}
-  <!-- PRELOAD SCRIPTS AND FONTS-->
-  <!-- NAMED BLOCK TO INJECT ELEMENTS FROM LAYOUT FILES -->
-  {%- block injectHead -%}{%- endblock -%}
-  <!-- META INFORMATION -->
-  {%- include "partials/meta.html" -%}
-</head>
-<body>
-  <a href="#main" class="skip-to-main">Skip to content</a>
-  <header class="site-head"></header>
-  <main id="main" tabindex="-1">
-    {%- block content -%}
-      This page is under maintenance.
-    {%- endblock -%}
-  </main>
-  <footer role="contentinfo"></footer>
-  {%- block bodyScripts -%}{%- endblock -%}
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- IF JS IS AVAILABLE ADD CLASS -->
+    <script>
+      document.documentElement.classList.add("has-js");
+    </script>
+    <!-- CSS -->
+    {%- include "css/styles.njk" -%}
+    <!-- PRELOAD SCRIPTS AND FONTS-->
+    <link rel="preload" href="/scripts/two-up.js" as="script" fetchpriority="high">
+    <link rel="preload" href="/fonts/roboto-condensed-v25-latin-700.woff2" as="font" type="font/woff2" crossorigin="">
+    <link rel="preload" href="/fonts/roboto-condensed-v25-latin-regular.woff2" as="font" type="font/woff2" crossorigin="">
+    <!-- NAMED BLOCK TO INJECT ELEMENTS FROM LAYOUT FILES -->
+    {%- block injectHead -%}{%- endblock -%}
+    <!-- META INFORMATION -->
+    {%- include "partials/meta.html" -%}
+  </head>
+  <body>
+    <a href="#main" class="skip-to-main">Skip to content</a>
+    <header class="site-head">
+      <h1>{{ title }}</h1>
+    </header>
+    <main class="flow" id="main" tabindex="-1">
+      {%- block content -%} This page is under maintenance. {%- endblock -%}
+    </main>
+    <!-- <footer role="contentinfo"></footer> -->
+    {%- block bodyScripts -%}{%- endblock -%}
+  </body>
 </html>
