--- a/src/_includes/css/styles.njk
+++ b/src/_includes/css/styles.njk
@@ -4,6 +4,8 @@
   {% include "./font.css" %}
   {% include "./space.css" %}
   {% include "./global.css" %}
+  {% include "./svg.css" %}
+  {% include "./slider.css" %}
   {% include "./utilities.css" %}
 {% endset %}
 
