--- a/src/_includes/partials/meta.html
+++ b/src/_includes/partials/meta.html
@@ -13,7 +13,7 @@
 {%- set description = site.description -%}
 
 {%- if not opengraphUrl -%}
-  {% set opengraphUrl = site.url + '/images/opengraph.jpg' %}
+  {% set opengraphUrl = site.url + '/images/og-dark.jpg' %}
 {%- endif -%}
 
 <title>{{ pageTitle }}</title>
