--- a/src/_includes/partials/slider.html
+++ b/src/_includes/partials/slider.html
@@ -1,12 +1,9 @@
 <div class="slider-container flow">
   <p class="orientation cluster">
-    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-      <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-      <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-    </svg>
-    Best experienced in landscape orientation.
+    Best experienced in landscape orientation
+    {%- include "partials/svg-landscape.html" -%}
   </p>
-  <two-up class="slider flow">
+  <two-up class="slider full-bleed flow">
     <div class="hubble" data-title="Hubble">
       {% image "./src/images/hubble.png", "NGC 3324 in the Carina Nebula captured on NASA’s Hubble Space Telescope", "(min-width: 30em) 98vw, 100vw", "eager" %}
     </div>
@@ -14,11 +11,14 @@
       {% image "./src/images/webb.png", "NGC 3324 in the Carina Nebula captured in infrared light by the Near-Infrared Camera (NIRCam) on NASA’s James Webb Space Telescope", "(min-width: 30em) 98vw, 100vw", "eager" %}
     </div>
   </two-up>
-  <p class="credit step--1">
-    Credit: NASA 
-    [
-    <a href="https://esahubble.org/images/opo0834a/">Hubble</a> | 
-    <a href="https://webbtelescope.org/contents/media/images/2022/031/01G77PKB8NKR7S8Z6HBXMYATGJ">Webb</a>
-    ]
-  </p>
+  <div class="slider-footer cluster">
+    <p class="credit step--1">
+      Credit: NASA 
+      [
+      <a href="https://esahubble.org/images/opo0834a/">Hubble</a> | 
+      <a href="https://webbtelescope.org/contents/media/images/2022/031/01G77PKB8NKR7S8Z6HBXMYATGJ">Webb</a>
+      ]
+    </p>
+    <button class="step--1" onclick="fullWidth()">View individually</button>
+  </div>
 </div>
