exclude slider svg from the a11y tree and provide an empty alt for pseudo content

--- a/src/_includes/css/slider.css
+++ b/src/_includes/css/slider.css
@@ -104,7 +104,8 @@
 
 :where(.has-js) .hubble:before,
 :where(.has-js) .webb::before {
-  content: "👀";
+  content: "👀"/"";
+  alt: "";
   position: absolute;
   inset-block-start: var(--space-xs-s);
   font-size: var(--step-1);
