use node env vars to minify html and css only in prod

--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -1,6 +1,6 @@
 {%- extends "layouts/base.html" -%}
 {%- block injectHead -%}
-  <script src="scripts/two-up.js"></script>
+  <script src="/scripts/two-up.js"></script>
 {%- endblock -%}
 {%- block content -%}
   {{ content | safe }}
