--- a/src/_includes/partials/meta.html
+++ b/src/_includes/partials/meta.html
@@ -43,6 +43,7 @@
 <link rel="icon" href="/icon.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 <link rel="manifest" href="/manifest.webmanifest"> -->
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔭</text></svg>">  
 
 <!-- ELEVENTY -->
 <meta name="generator" content="{{ eleventy.generator }}">
